# SimpleCV

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: SimpleCV.hpp
src/: SimpleCV.cpp  SimpleCV_Codec.cpp  SimpleCV_Common.hpp  SimpleCV_Draw.cpp  SimpleCV_Proc.cpp  SimpleCV_Text.cpp  SimpleCV_Utils.cpp
tests/: CMakeLists.txt  test_draw.cpp  test_imread_imwrite.cpp  test_simplecv.cpp
